<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel"
                  type="com.mind.coolest.url_checker.ui.main.viewmodel.MainViewModel"/>

        <variable name="handler"
                  type="com.mind.coolest.url_checker.ui.main.viewmodel.ClickHandler"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_size_50dp"
                android:drawableStart="@drawable/ic_search"
                android:paddingStart="@dimen/margin_10dp"
                android:paddingEnd="@dimen/margin_10dp"
                android:hint="@string/search_url"
                android:lines="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:background="@drawable/bg_search"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_20dp"
                android:drawablePadding="@dimen/margin_10dp"
                android:layout_marginStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_50dp"/>

        <ImageView
                android:id="@+id/imV_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sort"
                android:layout_marginEnd="@dimen/margin_15dp"
                app:layout_constraintTop_toTopOf="@id/et_search"
                app:layout_constraintBottom_toBottomOf="@id/et_search"
                android:onClick="@{() -> handler.onSortClick(viewModel.sortPickerDialog)}"
                app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:id="@+id/tv_addNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new"
                android:textColor="@color/color_black"
                app:layout_constraintTop_toBottomOf="@id/et_search"
                app:layout_constraintStart_toStartOf="@id/et_search"
                android:layout_marginTop="@dimen/margin_20dp"/>

        <ImageView
                android:id="@+id/imV_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_line"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_addNew"/>

        <EditText
                android:id="@+id/et_enter_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_url"
                android:drawableTop="@drawable/bg_line"
                app:layout_constraintTop_toTopOf="@id/imV_line1"
                app:layout_constraintBottom_toBottomOf="@id/imV_line2"
                android:text="@={viewModel.urlInput}"
                android:lines="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:paddingTop="@dimen/margin_10dp"
                android:paddingBottom="@dimen/margin_10dp"
                android:paddingEnd="@dimen/margin_30dp"
                android:paddingStart="@dimen/margin_10dp"
                android:layout_marginEnd="@dimen/margin_10dp"/>

        <ImageView
                android:id="@+id/imV_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_line"
                android:layout_marginTop="@dimen/margin_10dp"
                app:layout_constraintTop_toBottomOf="@id/et_enter_url"/>

        <ImageView
                android:id="@+id/imV_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_enter"
                android:onClick="@{() -> handler.onEnterClick(viewModel)}"
                app:layout_constraintEnd_toEndOf="@id/et_enter_url"
                app:layout_constraintTop_toTopOf="@id/et_enter_url"
                app:layout_constraintBottom_toBottomOf="@id/et_enter_url"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recV_urls"
                android:padding="@dimen/margin_10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/imV_line2"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/ic_refresh"
                android:id="@+id/addItemBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/margin_15dp"
                android:onClick="@{() -> handler.onRefreshClick(viewModel)}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>